@@ -100,6 +100,7 @@
 * IPG: Improve error handling [heavyblade] #4753
 * Shift4: Handle access token failed calls [heavyblade] #4745
 * Bogus: Add verify functionality [willemk] #4749
+* Litle: Update successful_from method [almalee24] #4765
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
